# Xiaoming-s-friends

./: README.md
oumuamua-refactoring/: README.md
oumuamua-refactoring/runtime/src/: account.rs  accountPro.rs  asset.rs  collateral.rs  lib.rs  order.rs
oumuamua-refactoring/src/: chain_spec.rs
oumuamua-v0.0.1/: Cargo.toml  README.md
oumuamua-v0.0.1/runtime/: Cargo.toml
oumuamua-v0.0.1/runtime/src/: lib.rs
oumuamua-v0.0.1/runtime/wasm/: Cargo.toml  build.sh
oumuamua-v0.0.1/runtime/wasm/src/: lib.rs
oumuamua-v0.0.1/src/: chain_spec.rs  main.rs  service.rs
web/: README.md  api.md  package.json
web/local_modules/: ajax.js
web/public/: index.html
web/src/: App.js  Component.jsx  routers.jsx
web/src/components/: transition.jsx
web/src/pages/capital/: capital.jsx  capital.scss  package.json
web/src/pages/header/: header.jsx  header.scss
web/src/pages/home/: home.jsx  home.scss
web/src/pages/launchCapital/: launchCapital.jsx  launchCapital.scss  package.json
web/src/pages/launchLoan/: launchLoan.jsx  package.json
web/src/pages/loan/: loan.jsx  loan.scss  package.json
web/src/reducers/: account.js
web/src/theme/: _icon.scss  _transition.scss  app.global.scss
