[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['project-runtime/std']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'project-runtime-wasm'
version = '1.0.0'
[dependencies.project-runtime]
default-features = false
path = '..'
